// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VacancyComponent #render should render VacancyComponent with defined posted date, deadline, and another default props 1`] = `
<div
  className="card"
>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <div
        className="row m-0"
      >
        <div
          className="col-2"
        >
          <img
            alt="1"
            className="img-thumbnail image-thumbnail-item"
            src="placeholder-image-768x576.png"
          />
        </div>
        <div
          className="col-6"
        >
          <h4>
            
          </h4>
          <p
            className="font-weight-light"
          >
            
          </p>
          <p
            className="font-weight-light text-small"
          >
            
             
            ·
             
            IDR 0.00
             
            -
             
            IDR 0.00
             
            /
             
            month
          </p>
        </div>
        <div
          className="col-4"
        >
          <div
            className="row justify-content-end"
          >
            <p
              className="font-weight-light text-small"
            >
              Posted
               
              2 days ago
               
              · Apply before
               
              14 May
              .
            </p>
          </div>
          <div
            className="row justify-content-end"
          >
            <button
              className="btn btn-outline-primary"
              type="button"
            >
              Vacancy Detail
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`VacancyComponent #render should render VacancyComponent with proper defined props 1`] = `
<div
  className="card"
>
  <ul
    className="list-group list-group-flush"
  >
    <li
      className="list-group-item"
    >
      <div
        className="row m-0"
      >
        <div
          className="col-2"
        >
          <img
            alt="1"
            className="img-thumbnail image-thumbnail-item"
            src="placeholder-image-768x576.png"
          />
        </div>
        <div
          className="col-6"
        >
          <h4>
            VP of Engineering
          </h4>
          <p
            className="font-weight-light"
          >
            My Company Inc
          </p>
          <p
            className="font-weight-light text-small"
          >
            West Jakarta, Indonesia
             
            ·
             
            IDR 0.00
             
            -
             
            IDR 0.00
             
            /
             
            month
          </p>
        </div>
        <div
          className="col-4"
        >
          <div
            className="row justify-content-end"
          >
            <p
              className="font-weight-light text-small"
            >
              Posted
               
              2 days ago
               
              · Apply before
               
              14 May
              .
            </p>
          </div>
          <div
            className="row justify-content-end"
          >
            <button
              className="btn btn-outline-primary"
              type="button"
            >
              Vacancy Detail
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
